--- a/FilmsDataBase/Views/Windows/AddFilmWindow.xaml
+++ b/FilmsDataBase/Views/Windows/AddFilmWindow.xaml
@@ -41,5 +41,8 @@
         <Button Height="20" Width="20" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="50, 115, 0, 0" Content="+" Command="{Binding AddTrailerCommand}"/>
         <Button Content="Return" Grid.Column="1" Grid.Row="2" Margin="180, 120, 20, 5" 
                 Command="{Binding CloseApplicationCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"/>
+        <MediaElement x:Name="Video" Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="2" Margin="10, 50, 10, 50" Source="{Binding Trailer}"
+                      LoadedBehavior="Manual" MouseLeftButtonDown="MediaElement_MouseLeftButtonDown"/>
+        <Image Grid.Column="2" Grid.Row="1" Grid.RowSpan="2" Margin="10, 50, 10, 50" Source="{Binding Icon}"/>
     </Grid>
 </Window>
