--- a/FilmsDataBase/Views/Windows/MainWindow.xaml
+++ b/FilmsDataBase/Views/Windows/MainWindow.xaml
@@ -34,14 +34,14 @@
             </DataTemplate>
         </Grid.Resources>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Menu Grid.Row="0">
             <MenuItem Header="File">
@@ -56,11 +56,11 @@
         <DataGrid ItemsSource="{Binding Films, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Grid.ColumnSpan="3" Grid.RowSpan="3" Margin="0, 20, 0, 0" AutoGenerateColumns="False"
                   CanUserAddRows="False" CanUserReorderColumns="False" CanUserDeleteRows="False" SelectedItem="{Binding WhichFilm, Mode=TwoWay}" IsReadOnly="True">
             <DataGrid.Columns>
-                <DataGridTextColumn Header = "Ttile" Width="80" Binding="{Binding Title}"/>
-                <DataGridTextColumn Header = "Description" Width="200" Binding="{Binding Description}"/>
-                <DataGridTemplateColumn Header = "Icon" Width="80" CellTemplate="{StaticResource Icon}"/>
-                <DataGridTemplateColumn Header = "Trailer" Width="240" CellTemplate="{StaticResource Trailer}"/>
-                <DataGridTextColumn Header = "Year" Width="80" Binding="{Binding Year, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/> 
+                <DataGridTextColumn Header = "Ttile" Width="100" Binding="{Binding Title}" />
+                <DataGridTextColumn Header = "Description" Width="140" Binding="{Binding Description}"/>
+                <DataGridTemplateColumn Header = "Icon" Width="auto" CellTemplate="{StaticResource Icon}"/>
+                <DataGridTemplateColumn Header = "Trailer" Width="auto" CellTemplate="{StaticResource Trailer}"/>
+                <DataGridTextColumn Header = "Year" Width="auto" Binding="{Binding Year, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/> 
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
