--- a/FilmsDataBase/Views/Windows/AddFilmWindow.xaml
+++ b/FilmsDataBase/Views/Windows/AddFilmWindow.xaml
@@ -44,5 +44,8 @@
         <MediaElement x:Name="Video" Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="2" Margin="10, 50, 10, 50" Source="{Binding Trailer}"
                       LoadedBehavior="Manual" MouseLeftButtonDown="MediaElement_MouseLeftButtonDown"/>
         <Image Grid.Column="2" Grid.Row="1" Grid.RowSpan="2" Margin="10, 50, 10, 50" Source="{Binding Icon}"/>
+        <Button Grid.Column="0" Grid.Row="1" Height="20" Width="20" HorizontalAlignment="Left" Margin="50, -120, 0, 0" Content="+" Click="Button_Click"/>
+        <Calendar Grid.Row="0" Grid.Column="0" Loaded="Button_Click" x:Name="Calendar" Margin="0, 70, 450, 0" SelectedDate="{Binding Year}"
+                  HorizontalAlignment="Center" Grid.ColumnSpan="3" Grid.RowSpan="3" VerticalAlignment="Center"/>
     </Grid>
 </Window>
