--- a/FilmsDataBase/App.xaml
+++ b/FilmsDataBase/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:FilmsDataBase"
-             StartupUri="Views\Windows\MainWindow.xaml">
+             StartupUri="Views\Windows\MainWindow.xaml"
+             Startup="Application_Startup">
     <Application.Resources>
          
     </Application.Resources>
