--- a/FilmsDataBase/Views/Windows/AddFilmWindow.xaml
+++ b/FilmsDataBase/Views/Windows/AddFilmWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:FilmsDataBase.Views.Windows"
         xmlns:vm="clr-namespace:FilmsDataBase.ViewModels"
         mc:Ignorable="d"
-        Title="AddFilmWindow" Height="480" Width="800">
+        Title="🐯🖊➕🐵" Height="480" Width="800" Icon="/Views/Windows/photo_2022-04-11_20-20-36.jpg">
     <Window.DataContext>
         <vm:AddFilmViewModel/>
     </Window.DataContext>
@@ -14,6 +14,15 @@
         <KeyBinding Command="{Binding SaveDataCommand}" Gesture="Ctrl + S"/>
         <KeyBinding Command="{Binding CloseApplicationCommand}" Gesture="ESC"/>
     </Window.InputBindings>
+    <Window.Resources>
+        <Style x:Key="RedTextBoxStyle" TargetType="{x:Type TextBox}">
+            <Style.Triggers>
+                <Trigger Property="IsFocused" Value="true">
+                    <Setter Property="Background" Value="#fcdce1" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -26,25 +35,38 @@
             <RowDefinition />
         </Grid.RowDefinitions>
         <Label Content="Title to film:" Height="40" Width="80" HorizontalAlignment="Left" Margin="0, -100, 0, 0"/>
-        <TextBox Margin="80,5,10,120" Grid.ColumnSpan="3" Text="{Binding Path=Title, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBox Margin="80,5,10,120" Grid.ColumnSpan="3" Text="{Binding Path=Title, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource RedTextBoxStyle}"/>
         <Label Content="Description:" Height="40" Width="80" HorizontalAlignment="Left" Margin="0, -40, 0, 0"/>
-        <TextBox Margin="80,40,10,85" Grid.ColumnSpan="3" Text="{Binding Path=Description, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBox Margin="80,40,10,85" Grid.ColumnSpan="3" Text="{Binding Path=Description, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource RedTextBoxStyle}"/>
         <Label Content="Image:" Height="40" Width="80" HorizontalAlignment="Left" Margin="0, 40, 0, 0"/>
-        <TextBox Margin="80,80,10,45" Grid.ColumnSpan="3" Text="{Binding Path=Icon, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
+        <TextBox Margin="80,80,10,45" Grid.ColumnSpan="3" Text="{Binding Path=Icon, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Style="{StaticResource RedTextBoxStyle}"/>
         <Label Content="Trailer:" Height="40" Width="80" HorizontalAlignment="Left" Margin="0, 120, 0, 0"/>
-        <TextBox Margin="80,120,10,0" Grid.ColumnSpan="3" Text="{Binding Path=Trailer, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
+        <TextBox Margin="80,120,10,0" Grid.ColumnSpan="3" Text="{Binding Path=Trailer, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Style="{StaticResource RedTextBoxStyle}"/>
         <Label Content="Year:" Height="40" Width="80" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0, 0, 0, 0" Grid.Row="1"/>
-        <TextBox Margin="80,5,10,120" Grid.ColumnSpan="3" Grid.Row="1" Text="{Binding Path=Year, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBox Margin="80,5,10,120" Grid.ColumnSpan="3" Grid.Row="1" Text="{Binding Path=Year, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource RedTextBoxStyle}"/>
         <Button Content="Save" Grid.Column="1" Grid.Row="2" Margin="20, 120, 180, 5" Command="{Binding SaveDataCommand}"
-                CommandParameter=""/>
-        <Button Height="20" Width="20" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="50, 35, 0, 0" Content="+" Command="{Binding AddIconCommand}"/>
-        <Button Height="20" Width="20" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="50, 115, 0, 0" Content="+" Command="{Binding AddTrailerCommand}"/>
+                Background="#fcdce1" Foreground="Black"/>
+        <Button Height="20" Width="20" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="50, 35, 0, 0" Command="{Binding AddIconCommand}" BorderThickness="0">
+            <Button.Background>
+                <ImageBrush ImageSource="D:\4 семестр\РПС\FilmsDataBase\ImageImage.jpg"/>
+            </Button.Background>
+        </Button>
+        <Button Height="20" Width="20" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="50, 115, 0, 0" Command="{Binding AddTrailerCommand}" BorderThickness="0">
+            <Button.Background>
+                <ImageBrush ImageSource="D:\4 семестр\РПС\FilmsDataBase\Trailer2Image.jpg"/>
+            </Button.Background>
+        </Button>
         <Button Content="Return" Grid.Column="1" Grid.Row="2" Margin="180, 120, 20, 5" 
-                Command="{Binding CloseApplicationCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"/>
+                Command="{Binding CloseApplicationCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                Background="#fcdce1" Foreground="Black"/>
         <MediaElement x:Name="Video" Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="2" Margin="10, 50, 10, 50" Source="{Binding Trailer}"
                       LoadedBehavior="Manual" MouseLeftButtonDown="MediaElement_MouseLeftButtonDown"/>
         <Image Grid.Column="2" Grid.Row="1" Grid.RowSpan="2" Margin="10, 50, 10, 50" Source="{Binding Icon}"/>
-        <Button Grid.Column="0" Grid.Row="1" Height="20" Width="20" HorizontalAlignment="Left" Margin="50, -120, 0, 0" Content="+" Click="Button_Click"/>
+        <Button Grid.Column="0" Grid.Row="1" Height="20" Width="20" HorizontalAlignment="Left" Margin="50, -120, 0, 0" Click="Button_Click" BorderThickness="0">
+            <Button.Background>
+                <ImageBrush ImageSource="/Views/Windows/PinkCalendar.jpg"/>
+            </Button.Background>
+        </Button>
         <Calendar Grid.Row="0" Grid.Column="0" Loaded="Button_Click" x:Name="Calendar" Margin="0, 70, 450, 0" SelectedDate="{Binding Year}"
                   HorizontalAlignment="Center" Grid.ColumnSpan="3" Grid.RowSpan="3" VerticalAlignment="Center"/>
     </Grid>
